dodate funkcionalnosti za post i get

--- a/index.html
+++ b/index.html
@@ -73,21 +73,24 @@
                 <option value="k3">3</option>
                 <option value="k4">4</option>
             </select>
-
-            <div id="greska">
-
-            </div>
-
-            <div id="submit">
-                <button type="button">Posalji zahtev</button>
-            </div>
         </div>
+
+        <div id="greska">
+
+        </div>
+
+        <div id="submit">
+            <button type="button">Posalji zahtev</button>
+        </div>
+
     </form>
 </body>
 </html>
 
 <script>
+    
     var nizBlokova = ["get_odgovor", "novosti_post", "kategorije_post", "brisanje_reda", "kategorije_put", "novosti_put", "greska"]
+   
     function skloniBlokove(){
         for(const blok of nizBlokova){
             document.getElementById(blok).style.display="none";
@@ -95,6 +98,9 @@
     };
 
     skloniBlokove();
+    $("input[name=http_zahtev]").on("click", prikaziBlok);
+    $("input[name=odabir_tabele]").on("click", resetHTTP);
+    $("button").on("click", posaljiZahtev);
 
     function prikaziBlok(){
         switch($("input[name=http_zahtev]:checked")[0].id){
@@ -153,6 +159,56 @@
             
             default:
                 break;
+        }
+    }
+
+    function resetHTTP(){
+        skloniBlokove();
+        $("input[name=http_zahtev").prop('checked', false);
+    }
+
+    function posaljiZahtev(){
+        if($("input[name=odabir_tabele]:checked").length!=0 && $("input[name=http_zahtev]:checked").length!=0){
+            var tabela = $("input[name=odabir_tabele]:checked")[0].id;
+
+            switch($("input[name=http_zahtev]:checked")[0].id){
+
+                case "get":
+                    if(tabela=="radio_novosti"){
+                        $.getJSON("http://localhost/rest/novosti.json", function(data){
+                            document.getElementById("get_odgovor").innerHTML = JSON.stringify(data,null,2);
+                        });
+                    }else{
+                        $.getJSON("http://localhost/rest/kategorije.json", function(data){
+                            document.getElementById("get_odgovor").innerHTML = JSON.stringify(data,null,2);
+                        });
+                    }
+                    break;
+
+                case "post":
+                    if(tabela=="radio_novosti"){
+                        var values = {
+                            "naslov":$("input[name=naslov_novosti]").val(),
+                            "tekst": $("#tekst_novosti").val(),
+                            "kategorija_id": parseInt($("#kategorija_odabir").val())
+                            };
+                            console.log(values);
+                            $.post("http://localhost/rest/novosti", JSON.stringify(values), function(data){
+                                alert("Odgovor od servera> " + data['poruka']);
+                            });
+                    }else{
+                        var values = {
+                            "kategorija": $("input[name=kategorija_naziv]").val()
+                            };
+                            console.log(values);
+                            $.post("http://localhost/rest/kategorije", JSON.stringify(values), function(data){
+                                alert("Odgovor od servera> " + data['poruka']);
+                            });
+                    }
+                    break;
+                default:
+                    console.log("def");
+            }
         }
     }
 </script>
